Fix issue of content overflowing (e.g., strategy results)

--- a/Site/webapp/wdkCustomization/js/client/components/homepage/VEuPathDBHomePage.scss
+++ b/Site/webapp/wdkCustomization/js/client/components/homepage/VEuPathDBHomePage.scss
@@ -14,6 +14,7 @@ body.vpdb-Body {
       "footer";
     
     grid-template-rows: 9.0625rem 1fr auto;
+    grid-template-columns: 100%;
   
     min-height: 100vh;
 
